Add basic React app

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,16 @@
-<!doctype html>
-<html>
-<head>
-  <title>IAP Hello Verified User</title>
-</head>
-<body>
-  <h1>Hola usuario verificado</h1>
-  <h2>Es tiempo de App_OS</h2>
-  <p>
-    Hello, {{ email }}! Your persistent ID appears to be {{ id }}.
-  </p>
-
-  <p>
-    Your verified email is {{ verified_email }},
-    and your verified persistent ID is {{ verified_id }}.
-  </p>
-
-  <p>
-    This is step 3 of the <em>User Authentication with IAP</em>
-    codelab.
-  </p>
-
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1"
+    />
+    <script src="/static/js/appOS.js"></script>
+    <!--<script src="/public/scripts/appOS.js"></script>-->
+    <title>App OS</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
