--- a/templates/jsscript.html
+++ b/templates/jsscript.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <script src="/static/scripts/scriptSample.js"></script>
+    <script src="/static/js/scriptSample.js"></script>
     <title>Script JS integrado</title>
   </head>
   <body>
