--- a/templates/testError.html
+++ b/templates/testError.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>IAP Hello World</title>
+    <title>Error</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Error</h1>
   </body>
 </html>
